pushing changes and updates to corporate modernism

--- a/about.html
+++ b/about.html
@@ -41,23 +41,38 @@
     </section>
 
     <!-- Introduction Section -->
-    <section class="about-intro">
+    <section class="about-faq">
         <div class="container">
-            <div class="intro-grid">
-                <div class="intro-content">
-                    <h2>What is Corporate Modernism?</h2>
-                    <p>Corporate Modernism is a design philosophy that marries the clean, purposeful aesthetics of modernism with the professionalism required in corporate environments. It's the belief that sophistication comes not from decoration, but from clarity, restraint, and intentionality.</p>
-                    <p>This philosophy emerged from the recognition that businesses needed design that was simultaneously beautiful and trustworthy—elegant yet functional—without sacrificing either quality.</p>
-                    <p>In a world of visual noise and unnecessary complexity, Corporate Modernism cuts through the clutter. It asks a simple question: "Does this design element serve a purpose?" If the answer is no, it's removed.</p>
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-list">
+                <div class="faq-item">
+                    <h3>What makes Corporate Modernism different from other design philosophies?</h3>
+                    <p>Corporate Modernism uniquely blends minimalist principles with professional standards, focusing on clarity, trust, and sophistication for business and enterprise contexts.</p>
                 </div>
-                <div class="intro-visual">
-                    <div class="visual-element">
-                        <div class="geometric-shape circle"></div>
-                        <div class="geometric-shape rectangle"></div>
-                        <div class="geometric-shape line"></div>
-                    </div>
+                <div class="faq-item">
+                    <h3>How do I implement Corporate Modernism in my project?</h3>
+                    <p>Start with a grid system, use a restrained color palette, prioritize typography, and build reusable components. Consistency and clarity are key.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Is Corporate Modernism accessible?</h3>
+                    <p>Yes. Accessibility is foundational—designs meet or exceed WCAG standards, support keyboard navigation, and use semantic HTML for screen readers.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Where is Corporate Modernism most effective?</h3>
+                    <p>It excels in professional settings: finance, healthcare, enterprise software, government, and anywhere trust and clarity are essential.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Can I use Corporate Modernism for creative or consumer brands?</h3>
+                    <p>While best suited for professional contexts, its principles of clarity and restraint can benefit any brand seeking trust and sophistication.</p>
                 </div>
             </div>
+            <h2>Resources & Further Reading</h2>
+            <ul class="about-resources">
+                <li><a href="#">Corporate Modernism Design Guide (PDF)</a></li>
+                <li><a href="#">Component Library</a></li>
+                <li><a href="#">Best Practices Checklist</a></li>
+                <li><a href="#">Accessibility Guidelines</a></li>
+            </ul>
         </div>
     </section>
 
