correcting how a section looked

--- a/index.html
+++ b/index.html
@@ -226,36 +226,36 @@
                         </div>
                     </div>
                     <p>Inter or similar sans-serif. Multiple weights create hierarchy. Proper line-height (1.5-1.6) ensures readability on all devices.</p>
-                </div>
-                <div class="system-card">
+                </div>                <div class="system-card">
                     <h3>Grid & Spacing</h3>
                     <div class="grid-system-preview">
-                        <div class="grid-demo">
-                            <div class="grid-gutter"><span class="grid-label">Gutter</span></div>
-                            <div class="grid-column"><span class="grid-label">1</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">2</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">3</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">4</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">5</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">6</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">7</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">8</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">9</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">10</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">11</span></div>
-                            <div class="grid-gutter"><span class="grid-label">G</span></div>
-                            <div class="grid-column"><span class="grid-label">12</span></div>
-                            <div class="grid-gutter"><span class="grid-label">Gutter</span></div>
+                        <div class="grid-demo-enhanced">
+                            <!-- Layout Example 1: Professional Card Layout -->
+                            <div class="layout-example">
+                                <div class="layout-label">Professional Layout Example</div>
+                                <div class="demo-grid">
+                                    <div class="demo-card main-content">
+                                        <div class="card-header">Main Content</div>
+                                        <div class="card-content">8 columns wide</div>
+                                    </div>
+                                    <div class="demo-card sidebar">
+                                        <div class="card-header">Sidebar</div>
+                                        <div class="card-content">4 columns</div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Spacing Hierarchy Demo -->
+                            <div class="spacing-demo">
+                                <div class="spacing-label">Spacing Hierarchy</div>
+                                <div class="spacing-examples">
+                                    <div class="spacing-item spacing-xs">4px</div>
+                                    <div class="spacing-item spacing-sm">8px</div>
+                                    <div class="spacing-item spacing-md">16px</div>
+                                    <div class="spacing-item spacing-lg">24px</div>
+                                    <div class="spacing-item spacing-xl">32px</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <p>12 or 16 column grid. Base spacing of 8px or 16px. Consistent margins and padding create visual rhythm and alignment.</p>
