Fixing the font consistency

--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Resources — Curated tools, fonts, libraries and learning materials for Corporate Modernism design.">
     <title>Resources — Corporate Modernism</title>
     <link rel="stylesheet" href="styles.css">
