--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about Corporate Modernism - the design philosophy that combines minimalist modernism with professional sophistication.">
     <title>About Corporate Modernism - Design Philosophy</title>
     <link rel="stylesheet" href="styles.css">
