--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog — Articles on Corporate Modernism, product design, and design systems.">
     <title>Blog — Corporate Modernism</title>
     <link rel="stylesheet" href="styles.css">
