--- a/case-studies.html
+++ b/case-studies.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Corporate Modernism Case Studies - Real-world examples of professional design excellence.">
     <title>Case Studies - Corporate Modernism Design in Action</title>
     <link rel="stylesheet" href="styles.css">
