--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Corporate Modernism - Professional design philosophy combining minimalist modernism with corporate sophistication.">
     <title>Corporate Modernism - Design Philosophy & Professional Excellence</title>
     <link rel="stylesheet" href="styles.css">
