--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Services — Corporate Modernism design and consulting offerings.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services — Corporate Modernism</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
