these are changes for WCAG

--- a/case-studies.html
+++ b/case-studies.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a class="skip-to-content" href="#main">Skip to main content</a>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar" aria-label="Primary">
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-icon">◆</span>
@@ -32,6 +33,7 @@
         </div>
     </nav>
 
+    <main id="main">
     <!-- Page Hero -->
     <section class="page-hero case-studies-hero">
         <div class="container">
@@ -417,6 +419,8 @@
             <a href="services.html" class="btn btn-primary btn-large">Get Started</a>
         </div>
     </section>
+
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
