adjusting site with the changes

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a class="skip-to-content" href="#main">Skip to main content</a>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar" aria-label="Primary">
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-icon">◆</span>
@@ -24,7 +25,7 @@
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="blog.html" class="nav-link active">Blog</a></li>
             </ul>
-            <button class="nav-toggle" id="navToggle">
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation" aria-expanded="false">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -39,7 +40,7 @@
         </div>
     </header>
 
-    <main class="container" style="padding: 40px 24px;">
+    <main id="main" class="container" style="padding: 40px 24px;">
         <section class="section-header">
             <h2>Latest articles</h2>
             <p class="section-lead">Short reads and deep dives — practical guides for teams and leaders.</p>
