--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
             </ul>
-            <button class="nav-toggle" id="navToggle">
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation" aria-expanded="false">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -225,7 +225,7 @@
                         <div class="type-scale">
                             <div class="type-item" style="font-size: 32px; font-weight: 700;">Heading</div>
                             <div class="type-item" style="font-size: 16px; font-weight: 400;">Body Text</div>
-                            <div class="type-item" style="font-size: 12px; font-weight: 300; color: #757575;">Caption</div>
+                            <div class="type-item" style="font-size: 12px; font-weight: 400; color: #525252;">Caption</div>
                         </div>
                     </div>
                     <p>Inter or similar sans-serif. Multiple weights create hierarchy. Proper line-height (1.5-1.6) ensures readability on all devices.</p>
@@ -301,42 +301,42 @@
             <div class="practices-grid">
                 <div class="practice-item">
                     <div class="practice-icon">1</div>
-                    <h4>Start with the Grid</h4>
+                    <h3>Start with the Grid</h3>
                     <p>Establish a consistent grid system (12 or 16 columns) and base spacing unit (8px or 16px). This foundation ensures alignment and visual harmony across all breakpoints.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">2</div>
-                    <h4>Choose Your Palette</h4>
+                    <h3>Choose Your Palette</h3>
                     <p>Select a neutral foundation (whites, light grays, dark grays) and one accent color. Stick to your choices. Consistency builds brand recognition.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">3</div>
-                    <h4>Typography First</h4>
+                    <h3>Typography First</h3>
                     <p>Select quality sans-serif fonts and establish a typographic scale. Good typography is the foundation of professional design. Invest time in getting this right.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">4</div>
-                    <h4>Build Component Library</h4>
+                    <h3>Build Component Library</h3>
                     <p>Create reusable components (buttons, cards, forms, etc.). This ensures consistency, speeds up development, and makes maintenance easier.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">5</div>
-                    <h4>Embrace White Space</h4>
+                    <h3>Embrace White Space</h3>
                     <p>Don't fill every pixel. Use whitespace strategically to guide attention and reduce cognitive load. Breathing room is professional.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">6</div>
-                    <h4>Test for Accessibility</h4>
+                    <h3>Test for Accessibility</h3>
                     <p>Validate WCAG AA compliance. Test with screen readers. Ensure keyboard navigation works. Accessibility isn't optional—it's fundamental.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">7</div>
-                    <h4>Subtle Interactions</h4>
+                    <h3>Subtle Interactions</h3>
                     <p>Use smooth transitions (200-400ms). Provide clear feedback. Avoid distracting animations. Interactions should feel natural, not intrusive.</p>
                 </div>
                 <div class="practice-item">
                     <div class="practice-icon">8</div>
-                    <h4>Document Everything</h4>
+                    <h3>Document Everything</h3>
                     <p>Create design system documentation. Establish clear guidelines for spacing, colors, typography, and components. This enables consistency across teams.</p>
                 </div>
             </div>
