--- a/case-studies.html
+++ b/case-studies.html
@@ -25,7 +25,7 @@
                 <li><a href="blog.html" class="nav-link">Blog</a></li>
                 <li><a href="resources.html" class="nav-link">Resources</a></li>
             </ul>
-            <button class="nav-toggle" id="navToggle">
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation" aria-expanded="false">
                 <span></span>
                 <span></span>
                 <span></span>
